# earthworm

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py  web_ui.py
app/adapters/reddit/: __init__.py  base.py  config.py  exceptions.py  factory.py  reddit_community.py  reddit_official.py
app/templates/: dashboard.html
app/utils/: agents.py
test/: comment_extraction_test.py  dynamic_reddit_test.py  test_enhanced_reddit.py  test_reddit_scraper.py
