[project]
name = "earthworm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.12.12",
    "beautifulsoup4==4.13.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "praw>=7.8.1",
    "python-dotenv>=1.1.1",
    "requests==2.32.4",
    "openpyxl>=3.1.0",
    "flask>=3.0.0",
    "flask-cors>=6.0.1",
]
